src/test/ui/compile-fail-migration/borrowck/borrowck-closures-use-after-free.nll.stderr
error[E0502]: cannot borrow `*ptr` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-closures-use-after-free.rs:32:8
   |
LL |   let mut test = |foo: &Foo| {
   |                  ----------- mutable borrow occurs here
LL |     ptr = box Foo { x: ptr.x + 1 };
   |     --- first borrow occurs due to use of `ptr` in closure
LL |   };
LL |   test(&*ptr); //~ ERROR cannot borrow `*ptr`
   |   -----^^^^^-
   |   |    |
   |   |    immutable borrow occurs here
   |   borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
